--- a/Learn/Learn.csproj
+++ b/Learn/Learn.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aop\DynamicProxy\PIAB\LogHandlerAttribute.cs" />
+    <Compile Include="Aop\DynamicProxy\PIAB\UnitTest1.cs" />
     <Compile Include="Aop\DynamicProxy\PIAB\User.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
