--- a/Learn/Learn.csproj
+++ b/Learn/Learn.csproj
@@ -38,6 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
@@ -77,6 +78,8 @@
     <Compile Include="Aop\Static\OrderProcessor.cs" />
     <Compile Include="Aop\Static\OrderProcessorDecorator.cs" />
     <Compile Include="Aop\Static\UnitTest1.cs" />
+    <Compile Include="DynamicType\StaticMemberDynamicWrapper.cs" />
+    <Compile Include="DynamicType\UnitTest1.cs" />
     <Compile Include="TypeInit\UnitTest1.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +90,7 @@
     <Content Include="Aop\Static\说明.txt" />
     <Content Include="Aop\说明.txt" />
     <Content Include="DesignPattern\说明.txt" />
+    <Content Include="DynamicType\说明.txt" />
     <Content Include="TypeInit\说明.txt" />
     <None Include="packages.config" />
   </ItemGroup>
