--- a/Learn/Learn.csproj
+++ b/Learn/Learn.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.4.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
@@ -67,12 +70,24 @@
       <HintPath>..\packages\MSTest.TestFramework.1.2.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aop\DynamicProxy\Castle\IUserProcessor.cs" />
+    <Compile Include="Aop\DynamicProxy\Castle\MyInterceptor.cs" />
+    <Compile Include="Aop\DynamicProxy\Castle\UnitTest1.cs" />
+    <Compile Include="Aop\DynamicProxy\Castle\User.cs" />
+    <Compile Include="Aop\DynamicProxy\Castle\UserProcessor.cs" />
     <Compile Include="Aop\DynamicProxy\PIAB\LogHandlerAttribute.cs" />
     <Compile Include="Aop\DynamicProxy\PIAB\UnitTest1.cs" />
     <Compile Include="Aop\DynamicProxy\PIAB\User.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\IUserProcessor.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\MyRealProxycs.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\TransparentProxy.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\UnitTest1.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\User.cs" />
+    <Compile Include="Aop\DynamicProxy\RealProxy\UserProcessor.cs" />
     <Compile Include="Aop\Static\IOrderProcessor.cs" />
     <Compile Include="Aop\Static\Order.cs" />
     <Compile Include="Aop\Static\OrderProcessor.cs" />
@@ -85,7 +100,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Aop\DynamicProxy\Castle\说明.txt" />
     <Content Include="Aop\DynamicProxy\PIAB\说明.txt" />
+    <Content Include="Aop\DynamicProxy\RealProxy\说明.txt" />
+    <Content Include="Aop\DynamicProxy\Self\Decorator\说明.txt" />
+    <Content Include="Aop\DynamicProxy\Self\说明.txt" />
     <Content Include="Aop\ILMix\说明.txt" />
     <Content Include="Aop\Static\说明.txt" />
     <Content Include="Aop\说明.txt" />
@@ -94,6 +113,7 @@
     <Content Include="TypeInit\说明.txt" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
