--- a/Learn/packages.config
+++ b/Learn/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.PolicyInjection" version="6.0.1304.0" targetFramework="net461" />
