添加单例模式

--- a/Learn/Learn.csproj
+++ b/Learn/Learn.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Aop\Static\OrderProcessorDecorator.cs" />
     <Compile Include="Aop\Static\UnitTest1.cs" />
     <Compile Include="DesignPattern\SimpleFactory.cs" />
+    <Compile Include="DesignPattern\Singleton.cs" />
     <Compile Include="DesignPattern\UnitTest1.cs" />
     <Compile Include="DynamicType\StaticMemberDynamicWrapper.cs" />
     <Compile Include="DynamicType\UnitTest1.cs" />
