--- a/Learn/Learn.csproj
+++ b/Learn/Learn.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.9.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.9.2\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.4.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -99,7 +102,9 @@
     <Compile Include="DynamicType\StaticMemberDynamicWrapper.cs" />
     <Compile Include="DynamicType\UnitTest1.cs" />
     <Compile Include="Event\UnitTest1.cs" />
+    <Compile Include="Ioc\AutoFacM\UnitTest1.cs" />
     <Compile Include="MicrosoftFrameWork\InterlockedTest.cs" />
+    <Compile Include="MicrosoftFrameWork\SourceDis.cs" />
     <Compile Include="TypeInit\UnitTest1.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,11 +122,17 @@
     <Content Include="DesignPattern\说明.txt" />
     <Content Include="DynamicType\说明.txt" />
     <Content Include="Event\说明.txt" />
+    <Content Include="Ioc\AutoFacM\说明.txt" />
+    <Content Include="Ioc\说明.txt" />
     <Content Include="MicrosoftFrameWork\说明.txt" />
+    <Content Include="Mvc\ModelBinder\说明.txt" />
     <Content Include="TypeInit\说明.txt" />
+    <Content Include="说明.txt" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="owin\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
