--- a/Learn/packages.config
+++ b/Learn/packages.config
@@ -5,8 +5,12 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.PolicyInjection" version="6.0.1304.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="4.0.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Unity" version="3.0.1304.0" targetFramework="net461" />
   <package id="Unity.Interception" version="3.0.1304.0" targetFramework="net461" />
 </packages>
