--- a/Lear.Mvc/Web.config
+++ b/Lear.Mvc/Web.config
@@ -20,8 +20,8 @@
       sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes" 
       cookieless="false" 
       timeout="20"  
-    />-->  
-    <sessionState mode="InProc" /><!--需要触发会话结束事件加上此配置 https://blog.csdn.net/ddxkjddx/article/details/7723023-->
+    /> https://blog.csdn.net/ddxkjddx/article/details/7723023 -->  
+    <sessionState mode="InProc" /><!--需要触发会话结束事件加上此配置 -->
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
