--- a/LearnTest/Learn.Console.csproj
+++ b/LearnTest/Learn.Console.csproj
@@ -44,8 +44,12 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +68,8 @@
     <Compile Include="Owin\Startup.cs" />
     <Compile Include="Reflex\Example.cs" />
     <Compile Include="Reflex\Program.cs" />
+    <Compile Include="RequestWebApi\BySelfe\Program.cs" />
+    <Compile Include="RequestWebApi\RestSharp\Program.cs" />
     <Compile Include="Temp\Program.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +80,13 @@
     <Content Include="MicrosoftFrameWork\KnowForeach\说明.txt" />
     <Content Include="MicrosoftFrameWork\TypeOfDictionary\说明.txt" />
     <Content Include="Owin\说明.txt" />
+    <Content Include="RequestWebApi\RestSharp\说明.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Learn.WebApi\Learn.WebApi.csproj">
+      <Project>{587a2eba-cbfe-4c7a-b9e4-0b28c7da4f4b}</Project>
+      <Name>Learn.WebApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
