--- a/LearnTest/packages.config
+++ b/LearnTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="8.1.1" targetFramework="net461" />
+  <package id="Faker.Net" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="4.0.1" targetFramework="net461" />
