--- a/Lear.Mvc/Web.config
+++ b/Lear.Mvc/Web.config
@@ -23,7 +23,7 @@
     /> https://blog.csdn.net/ddxkjddx/article/details/7723023 -->  
     <sessionState mode="InProc" /><!--需要触发会话结束事件加上此配置 -->
     <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <httpRuntime requestValidationMode="4.5"   targetFramework="4.6.1"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
