--- a/Learn.Asp/Web.config
+++ b/Learn.Asp/Web.config
@@ -5,8 +5,9 @@
 -->
 <configuration>
   <system.web>
+    <pages validateRequest="false"></pages>
     <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <httpRuntime requestValidationMode="2.0" targetFramework="4.6.1"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization"/>
