--- a/LearnTest/packages.config
+++ b/LearnTest/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.Owin.Hosting" version="4.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="RestSharp" version="106.6.10" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
 </packages>
