--- a/Learn.Ac/Web.config
+++ b/Learn.Ac/Web.config
@@ -38,6 +38,15 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" maxQueryStringLength="2097151" maxUrlLength="2097151" requestValidationMode="2.0" />
   </system.web>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Methods" value="OPTIONS,POST,GET"/>
+        <add name="Access-Control-Allow-Headers" value="x-requested-with,content-type"/>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
