--- a/Learn.Html/Learn.Html.csproj
+++ b/Learn.Html/Learn.Html.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DemoTree-1.html" />
     <Content Include="images\lastnode.png" />
     <Content Include="images\node.png" />
     <Content Include="images\vline.png" />
@@ -78,6 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Css.Selector" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
