--- a/Learn.Html/Learn.Html.csproj
+++ b/Learn.Html/Learn.Html.csproj
@@ -73,6 +73,8 @@
     <Content Include="images\node.png" />
     <Content Include="images\vline.png" />
     <Content Include="Index.html" />
+    <Content Include="muchansy\index.html" />
+    <Content Include="muchansy\jquery.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +82,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Css.Selector" />
+    <Content Include="muchansy\jb-1-1.json" />
+    <Content Include="muchansy\jb-1-2.json" />
+    <Content Include="muchansy\jb-2-1.json" />
+    <Content Include="muchansy\jb-2-2.json" />
+    <Content Include="muchansy\jd.json" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
