--- a/Learn.Html/Learn.Html.csproj
+++ b/Learn.Html/Learn.Html.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Css-Selector.html" />
     <Content Include="DemoTree-1.html" />
     <Content Include="images\lastnode.png" />
     <Content Include="images\node.png" />
@@ -75,13 +76,13 @@
     <Content Include="Index.html" />
     <Content Include="muchansy\index.html" />
     <Content Include="muchansy\jquery.js" />
+    <Content Include="Temp.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Css.Selector" />
     <Content Include="muchansy\jb-1-1.json" />
     <Content Include="muchansy\jb-1-2.json" />
     <Content Include="muchansy\jb-2-1.json" />
