--- a/Learn.Ac/Web.config
+++ b/Learn.Ac/Web.config
@@ -18,7 +18,7 @@
     <!--<add key="webapihost" value="https://sjbo-test-acdemoapi.shijicloud.com/" />-->
     <!--<add key="webapihost" value="http://127.0.0.1:9000" />-->
     <!--<add key="webapihost" value="http://10.13.40.222:9001" />-->
-    <add key="webapihost" value="http://10.13.10.108:9104/" />
+    <add key="webapihost" value="http://localhost:5558/" />
     <!--<add key="webapihost" value="http://10.13.10.108:9000" />-->
     <!--<add key="webapihost" value="http://10.13.10.108:60181/" />-->
     <!--<add key="webapihost" value="http://10.13.52.177:52147/" />-->
