--- a/Learn.Ac/Learn.Ac.csproj
+++ b/Learn.Ac/Learn.Ac.csproj
@@ -49,19 +49,19 @@
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SJ.FrontEnd.Base, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SJ.FrontEnd.Base.1.2.8\lib\net472\SJ.FrontEnd.Base.dll</HintPath>
+      <HintPath>..\packages\SJ.FrontEnd.Base.1.3.0\lib\net472\SJ.FrontEnd.Base.dll</HintPath>
     </Reference>
     <Reference Include="SJ.FrontEnd.HostWeb, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SJ.FrontEnd.HostWeb.1.2.8\lib\net472\SJ.FrontEnd.HostWeb.dll</HintPath>
+      <HintPath>..\packages\SJ.FrontEnd.HostWeb.1.3.0\lib\net472\SJ.FrontEnd.HostWeb.dll</HintPath>
     </Reference>
     <Reference Include="SJ.Global, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SJ.Global.1.2.8\lib\net472\SJ.Global.dll</HintPath>
+      <HintPath>..\packages\SJ.Global.1.2.9\lib\net472\SJ.Global.dll</HintPath>
     </Reference>
     <Reference Include="SJ.UDF.WebBase, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SJ.UDF.WebBase.1.0.1\lib\SJ.UDF.WebBase.dll</HintPath>
     </Reference>
     <Reference Include="SJ.WebApi.Client, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SJ.WebApi.Client.1.2.8\lib\net472\SJ.WebApi.Client.dll</HintPath>
+      <HintPath>..\packages\SJ.WebApi.Client.1.2.9\lib\net472\SJ.WebApi.Client.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -249,6 +249,7 @@
     <Compile Include="Controllers\AcBalancy2Controller.cs" />
     <Compile Include="Controllers\LAcBalancyController.cs" />
     <Compile Include="Controllers\LDemoFormListController.cs" />
+    <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\TestFormController.cs" />
     <Compile Include="EzFormList.cs" />
     <Compile Include="Global.asax.cs">
